# quantum-sniffer

./: .gitignore  BUGS_FOUND.md  MANIFEST.in  PERSISTENT_MONITORING.md  PQ_DETECTION_FIX.md  PROBE_IMPLEMENTATION_SUMMARY.md  PROBING.md  README.md  REFACTORING_SUMMARY.md  SELF_SCAN.md  SELF_SCAN_IMPLEMENTATION.md  deploy-monitor.sh  deploy-self-scan.sh  discover-external-services.py  example_library_usage.py  example_probing.py  fix_encryption_status.py  fix_tls_unknown.py  persistent-monitor.py  pyproject.toml  quantum-sniffer-monitor.service  quantum-sniffer.json  quantum-sniffer.py  requirements.txt  scan-network.sh  self-scan.py  setup.cfg  setup.py  sniffy.py  stinky.py  uninstall-self-scan.sh
ansible/: README.md  generate-inventory-from-upce.py  inventory.ini  run-quantum-sniffer.yml
ansible/examples/: bulk-compliance-check.sh  scan-and-label.sh  scan-production.sh
ansible/results/: 10.22.0.46-2026-06-29-scan.json  10.22.0.46-2026-06-29-scan.md
quantum_sniffer/: __init__.py  analyzers.py  cli.py  constants.py  output.py  pq.py  skynet.py  sniffer.py
quantum_sniffer/cli/: __init__.py  app.py  capture.py  output.py
quantum_sniffer/integrations/: __init__.py  illumio.py
quantum_sniffer/lib/: __init__.py  analyzer.py  models.py  pq.py  utils.py
quantum_sniffer/lib/prober/: __init__.py  ikev2_probe.py  output.py  probe.py  results.py  ssh_probe.py  starttls_probe.py  targets.py  tls_probe.py
quantum_sniffer/lib/protocols/: __init__.py  base.py
quantum_sniffer/parsers/: asn1.py  ikev2.py  quic.py  ssh.py  tls_raw.py
tests/: test_cli.py  test_cli_dual_output.py  test_dual_writer.py  test_ikev2.py  test_jsonl_writer.py  test_pq.py  test_skynet.py  test_ssh_kex.py  test_tls_raw.py
